Expose timezone to daemon

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,7 @@ services:
     - /srv/daemon/config:/srv/daemon/config
     - /srv/daemon/packs:/srv/daemon/packs
     - /srv/daemon-data:/srv/daemon-data
+    - /etc/timezone:/etc/timezone:ro
 
     - /tmp/pterodactyl:/tmp/pterodactyl
 
